reflectapi-demo/tests/errors/invalid_reflect_on_nested_struct.stderr
error[E0277]: the trait bound `TestStructNested: Input` is not satisfied
 --> tests/errors/invalid_reflect_on_nested_struct.rs:3:9
  |
3 |     _f: TestStructNested,
  |         ^^^^^^^^^^^^^^^^ the trait `Input` is not implemented for `TestStructNested`
  |
  = help: the following other types implement trait `Input`:
            ()
            (A, B)
            (A, B, C)
            (A, B, C, D)
            (A, B, C, D, E)
            (A, B, C, D, E, F)
            (A, B, C, D, E, F, G)
            (A, B, C, D, E, F, G, H)
          and $N others

error[E0277]: the trait bound `TestStructNested: reflectapi::Output` is not satisfied
 --> tests/errors/invalid_reflect_on_nested_struct.rs:3:9
  |
3 |     _f: TestStructNested,
  |         ^^^^^^^^^^^^^^^^ the trait `reflectapi::Output` is not implemented for `TestStructNested`
  |
  = help: the following other types implement trait `reflectapi::Output`:
            &'static str
            ()
            (A, B)
            (A, B, C)
            (A, B, C, D)
            (A, B, C, D, E)
            (A, B, C, D, E, F)
            (A, B, C, D, E, F, G)
          and $N others
